<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_quiz"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".QuestionActivity$PlaceholderFragment"
    >
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fragment_word_container"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/repetition_label"
        android:text="@string/repetition_label"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:singleLine="true"
        android:layout_below="@+id/fragment_word_container" />
    <RadioGroup
        android:id="@+id/repetitionChoice"
        android:checkedButton="@+id/highChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/repetition_label"
        android:padding="0dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/highChoice"
            android:text="@string/high_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:paddingRight="10dp"
            />
        <RadioButton
            android:id="@+id/mediumChoice"
            android:text="@string/medium_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:paddingRight="10dp"

            />
        <RadioButton
            android:id="@+id/lowChoice"
            android:text="@string/low_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:singleLine="true"
            />
        <RadioButton
            android:id="@+id/neverChoice"
            android:text="@string/never_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:singleLine="true"
            />
    </RadioGroup>
    <ImageButton
        android:id="@+id/play_button"
        android:src="@drawable/play_audio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="90dp"
        android:layout_below="@+id/repetition_label"
        android:scaleType="centerInside"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <Button
        android:id="@+id/prev_button"
        android:text="@string/prev_label"
        android:drawableLeft="@drawable/arrow_left"
        android:drawablePadding="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/repetitionChoice"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:width="130dp"/>
    <Button
        android:id="@+id/next_button"
        android:text="@string/next_label"
        android:drawableRight="@drawable/arrow_right"
        android:drawablePadding="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/repetitionChoice"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:width="130dp" />
    <TableLayout
        android:id="@+id/progressLayout"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        android:background="#00FFFF"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TableRow
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:text="@string/high_label"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/medium_label"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/low_label"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/never_label"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>
        <TableRow
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:id="@+id/highCount"
                android:text="00"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/medCount"
                android:text="00"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/lowCount"
                android:text="00"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/neverCount"
                android:text="00"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>
    </TableLayout>
</RelativeLayout>
